#
# automake provides the following useful targets:
#
# all: build all programs and libraries using the current
# configuration (set by configure)
#
# check: build and run all self-tests
#
# clean: remove everything except what's required to build everything
#
# distclean: remove everything except what goes in the distribution
#
# The old 'debug' target is obsolete; configure the source tree with
# ./configure --enable-debug to enable debugging and self-tests
#
# The old 'release' target is obsolete; this is now the default
#


SUBDIRS = src test

DISTCLEANFILES = libtool-disable-static

AUTOMAKE_OPTIONS = foreign
